solver z-index issue

--- a/travel-car/style.css
+++ b/travel-car/style.css
@@ -94,10 +94,8 @@ a {
   font-size: 35px;
   letter-spacing: 20px;
   color: rgb(255, 255, 255);
-  z-index: 1;
   width: auto;
   font-family:helvetica;
-  background:red;
 
   animation: appear 3s;
 }
@@ -166,7 +164,6 @@ a {
   list-style-type: none;
   margin-top: 180px;
   align-content: space-evenly;
-  background:blue;
 }
 
 .menuLink {
@@ -273,7 +270,7 @@ a {
    }
 
    .menuLinks {
-     margin-top: 100px;  
+     margin-top: 25%;  
      z-index:10;
    }
 
